--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hi , it is page without any tag!
+<html lang="de">
+    <head
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        >
+        <title>Sonny's Homepage</title>
+    </head>
+<body>
+    <!-- Hier ist ein Kommentar-->
+    Hallo German Website!
+</body>
+</html>
